SERVER-117353 correctly calculate $configMajority for safe reconfig (#49347)

GitOrigin-RevId: 4d258281375c5f639bc645ed03131f74adfc5854